--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -1,12 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Chat App</title>
-  </head>
-  <body>
-    <div id="root" class="w-screen h-screen flex items-center justify-center"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <script>  (function (g, u, i, d, e, s) {
+        g[e] = g[e] || [];
+        var f = u.getElementsByTagName(i)[0];
+        var k = u.createElement(i);
+        k.async = true;
+        k.src = 'https://static.userguiding.com/media/user-guiding-' + s + '-embedded.js';
+        f.parentNode.insertBefore(k, f);
+        if (g[d]) return;
+        var ug = g[d] = {q: []};
+        ug.c = function (n) {
+            return function () {
+                ug.q.push([n, arguments])
+            };
+        };
+        var m = ['previewGuide', 'finishPreview', 'track', 'identify', 'hideChecklist', 'launchChecklist'];
+        for (var j = 0; j < m.length; j += 1) {
+            ug[m[j]] = ug.c(m[j]);
+        }
+    })(window, document, 'script', 'userGuiding', 'userGuidingLayer', 'N17102763G6YID');</script>
+</head>
+<body>
+<div id="root" class="w-screen h-screen flex items-center justify-center"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
