fix: toReadableDate function fixed

--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Chat App</title>
-    <script>  (function (g, u, i, d, e, s) {
+    <script>  /**(function (g, u, i, d, e, s) {
         g[e] = g[e] || [];
         var f = u.getElementsByTagName(i)[0];
         var k = u.createElement(i);
@@ -22,7 +22,7 @@
         for (var j = 0; j < m.length; j += 1) {
             ug[m[j]] = ug.c(m[j]);
         }
-    })(window, document, 'script', 'userGuiding', 'userGuidingLayer', 'N17102763G6YID');</script>
+    })(window, document, 'script', 'userGuiding', 'userGuidingLayer', 'N17102763G6YID');**/</script>
 </head>
 <body>
 <div id="root" class="w-screen h-screen flex items-center justify-center"></div>
